Refined my search service to provide correct result
